--- a/ReportDesigner/PropertiesModule/VIews/ShapesPropertyView.xaml
+++ b/ReportDesigner/PropertiesModule/VIews/ShapesPropertyView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PropertiesModule.VIews.ShapersPropertyView"
+﻿<UserControl x:Class="PropertiesModule.VIews.ShapesPropertyView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
